fix ObjectAccessor bug